Update user form inputs

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,10 +5,10 @@
 <%= form.text_field :username %>
 <br/>
 <%= form.label :email, "email"%>
-<%= form.text_field :email %>
+<%= form.email_field :email %>
 <br/>
 <%= form.label :password, "password"%>
-<%= form.text_field :password %>
+<%= form.password_field :password %>
 <br/>
 <%= form.submit %>
 <%end%>
