--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,7 +14,7 @@
 <%end%>
 
 
-<%= form_tag("/users/new", method: "post") do %>
+<%= form_tag(:users, method: "post") do %>
 <%= label_tag(:username, "username")%>
 <%= text_field_tag(:username) %>
 <br/>
@@ -27,3 +27,4 @@
 <%= submit_tag("create") %>
 <% end %>
 -->
+
