--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,23 @@
-<%= @user.username %>
 
-<%= link_to "edit", edit_user_path %>
+<div class="container w-50">
+    <table class="table table-striped m-5">
+        <thead class='table-dark'>
+            <tr>
+                <td>Username</td>
+                <td>Email</td>
+                <td>Edit</td>
+                <td>Go back</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><%= @user.username %></td>
+                <td><%= @user.email %></h3></td>
+                <td><%= link_to "edit", edit_user_path(@user) %></td>
+                <td><%= link_to "back", users_path %></td>
+            </tr>
+        </tbody>
+    </table>
+
+   
+</div>
