--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,9 +3,11 @@
 
   <% if @user.errors.full_messages.any? %>
     <% @user.errors.full_messages.each do |error_message| %>
-      <%= error_message if @user.errors.full_messages.first == error_message %> <br />
+      <% if @user.errors.full_messages.first == error_message %>
+        <div class="alert alert-warning" role="alert"><%=error_message %></div>
     <% end %>
   <% end %>
+   <% end %>
 <div>
 <h1> Edit User: <%= @user.username %></h1>
   <%= render "users/form"%>
