--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,9 +5,11 @@
 <br/>
   <% if @user.errors.full_messages.any? %>
     <% @user.errors.full_messages.each do |error_message| %>
-      <%= error_message if @user.errors.full_messages.first == error_message %> <br />
+      <% if @user.errors.full_messages.first == error_message %>
+        <div class="alert alert-warning" role="alert"><%=error_message %></div>
     <% end %>
   <% end %>
+   <% end %>
 
   <%= render "users/form"%>
 </div>
